Fix search modal overflow issue and rearrange folder structure

--- a/web/src/app/globals.scss
+++ b/web/src/app/globals.scss
@@ -34,6 +34,7 @@ $black: #000;
 
 body {
     background-color: $bg-primary;
+    overflow-x: hidden;
 }
 
 p {
